unpackaged/main/default/objects/Contract__c/Contract__c.object-meta.xml
<CustomObject>
    <label>Contrat SAP</label>
    <nameField>
        <label>Numéro du Contrat SAP</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contrats SAP</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>