unpackaged/main/default/objects/Contract__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compte</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contrats SAP</relationshipLabel>
    <relationshipName>Contrats_SAP</relationshipName>
    <type>Lookup</type>
</CustomField>