unpackaged/main/default/objects/Contract__c/fields/Agence__c.field-meta.xml
<CustomField>
    <fullName>Agence__c</fullName>
    <label>Agence</label>
    <length>255</length>
    <type>Text</type>
</CustomField>