unpackaged/main/default/objects/Contract__c/fields/CodeGestion__c.field-meta.xml
<CustomField>
    <fullName>CodeGestion__c</fullName>
    <label>Code gestion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>