unpackaged/main/default/objects/Contract__c/fields/CodePostalExpedition__c.field-meta.xml
<CustomField>
    <fullName>CodePostalExpedition__c</fullName>
    <label>Code postal d&#39;expédition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>