unpackaged/main/default/objects/Contract__c/fields/CodePostalFacturation__c.field-meta.xml
<CustomField>
    <fullName>CodePostalFacturation__c</fullName>
    <label>Code postal de facturation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>