unpackaged/main/default/objects/Contract__c/fields/ContractType__c.field-meta.xml
<CustomField>
    <fullName>ContractType__c</fullName>
    <label>Type de contrat</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contrat Abonnement</fullName>
            </value>
            <value>
                <fullName>Contrat container CD</fullName>
            </value>
            <value>
                <fullName>Contrat Courte Durée</fullName>
            </value>
            <value>
                <fullName>Contrat Container</fullName>
            </value>
            <value>
                <fullName>Contrat maintenance</fullName>
            </value>
            <value>
                <fullName>Contrat container LD</fullName>
            </value>
            <value>
                <fullName>Longue Durée Parc</fullName>
            </value>
            <value>
                <fullName>Longue Durée Neuf</fullName>
            </value>
            <value>
                <fullName>Contrat Mobilier</fullName>
            </value>
            <value>
                <fullName>Contrat container MD</fullName>
            </value>
            <value>
                <fullName>Contrat Moyenne Duré</fullName>
            </value>
            <value>
                <fullName>Contrat service</fullName>
            </value>
            <value>
                <fullName>Abonnement</fullName>
                <isActive>false</isActive>
                <label>Abonnement</label>
            </value>
            <value>
                <fullName>Contrat de service</fullName>
                <isActive>false</isActive>
                <label>Contrat de service</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>