unpackaged/main/default/objects/Contract__c/fields/DateMAD__c.field-meta.xml
<CustomField>
    <fullName>DateMAD__c</fullName>
    <label>Date de MAD</label>
    <type>Date</type>
</CustomField>