unpackaged/main/default/objects/Contract__c/fields/DateReconduction__c.field-meta.xml
<CustomField>
    <fullName>DateReconduction__c</fullName>
    <label>Date de reconduction</label>
    <type>Date</type>
</CustomField>