unpackaged/main/default/objects/Contract__c/fields/DateResiliation__c.field-meta.xml
<CustomField>
    <fullName>DateResiliation__c</fullName>
    <description>Alimenté par S4</description>
    <label>Date de résiliation</label>
    <type>Date</type>
</CustomField>