unpackaged/main/default/objects/Contract__c/fields/DateSignatureClient__c.field-meta.xml
<CustomField>
    <fullName>DateSignatureClient__c</fullName>
    <label>Date de signature du client</label>
    <type>Date</type>
</CustomField>