unpackaged/main/default/objects/Contract__c/fields/IndexedRent__c.field-meta.xml
<CustomField>
    <fullName>IndexedRent__c</fullName>
    <label>Loyer indexé</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>