unpackaged/main/default/objects/Contract__c/fields/KMInclus__c.field-meta.xml
<CustomField>
    <fullName>KMInclus__c</fullName>
    <label>KM Inclus</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>