unpackaged/main/default/objects/Contract__c/fields/LoyerInitial__c.field-meta.xml
<CustomField>
    <fullName>LoyerInitial__c</fullName>
    <label>Loyer initial</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>