unpackaged/main/default/objects/Contract__c/fields/LoyerInitialNet__c.field-meta.xml
<CustomField>
    <fullName>LoyerInitialNet__c</fullName>
    <label>Loyer initial net</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>