unpackaged/main/default/objects/Contract__c/fields/NumBonCommandeClient__c.field-meta.xml
<CustomField>
    <fullName>NumBonCommandeClient__c</fullName>
    <label>Numéro de bon de commande client</label>
    <length>255</length>
    <type>Text</type>
</CustomField>