unpackaged/main/default/objects/Contract__c/fields/NumClientSAP__c.field-meta.xml
<CustomField>
    <fullName>NumClientSAP__c</fullName>
    <label>N° Client SAP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>