unpackaged/main/default/objects/Contract__c/fields/NumContratPF__c.field-meta.xml
<CustomField>
    <fullName>NumContratPF__c</fullName>
    <label>Numéro de contrat PF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>