unpackaged/main/default/objects/Contract__c/fields/NumDevisCPQ__c.field-meta.xml
<CustomField>
    <fullName>NumDevisCPQ__c</fullName>
    <label>Numéro de devis CPQ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>