unpackaged/main/default/objects/Contract__c/fields/Numero_de_devis_SAP_CPQ__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_devis_SAP_CPQ__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Numéro de devis SAP CPQ</label>
    <referenceTo>Quote__c</referenceTo>
    <relationshipLabel>Contrats SAP</relationshipLabel>
    <relationshipName>Contrats_SAP</relationshipName>
    <type>Lookup</type>
</CustomField>