unpackaged/main/default/objects/Contract__c/fields/NumeroParc__c.field-meta.xml
<CustomField>
    <fullName>NumeroParc__c</fullName>
    <label>Numéro de parc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>