unpackaged/main/default/objects/Contract__c/fields/NumGroupeCompensation__c.field-meta.xml
<CustomField>
    <fullName>NumGroupeCompensation__c</fullName>
    <label>Num groupe compensation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>