unpackaged/main/default/objects/Contract__c/fields/NumParcRenouvele__c.field-meta.xml
<CustomField>
    <fullName>NumParcRenouvele__c</fullName>
    <label>Numéro de parc renouvelé</label>
    <length>255</length>
    <type>Text</type>
</CustomField>