unpackaged/main/default/objects/Contract__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunité</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Contrats SAP</relationshipLabel>
    <relationshipName>Contrats_SAP</relationshipName>
    <type>Lookup</type>
</CustomField>