unpackaged/main/default/objects/Contract__c/fields/PaysExpedition__c.field-meta.xml
<CustomField>
    <fullName>PaysExpedition__c</fullName>
    <label>Pays d&#39;expédition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>