unpackaged/main/default/objects/Contract__c/fields/PaysFacturation__c.field-meta.xml
<CustomField>
    <fullName>PaysFacturation__c</fullName>
    <label>Pays de facturation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>