unpackaged/main/default/objects/Contract__c/fields/PrixKMSupp__c.field-meta.xml
<CustomField>
    <fullName>PrixKMSupp__c</fullName>
    <label>Prix Km Supplémentaire</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>