unpackaged/main/default/objects/Contract__c/fields/PrixKMSuppNet__c.field-meta.xml
<CustomField>
    <fullName>PrixKMSuppNet__c</fullName>
    <label>Prix KM Supp net</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>