unpackaged/main/default/objects/Contract__c/fields/ProductType__c.field-meta.xml
<CustomField>
    <fullName>ProductType__c</fullName>
    <label>Type de produit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TypeProduits</valueSetName>
    </valueSet>
</CustomField>