unpackaged/main/default/objects/Contract__c/fields/RemiseKMSupp__c.field-meta.xml
<CustomField>
    <fullName>RemiseKMSupp__c</fullName>
    <label>Remise KM Supp</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>