unpackaged/main/default/objects/Contract__c/fields/RentType__c.field-meta.xml
<CustomField>
    <fullName>RentType__c</fullName>
    <label>Type de location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Type_Location</valueSetName>
    </valueSet>
</CustomField>