unpackaged/main/default/objects/Contract__c/fields/RueExpedition__c.field-meta.xml
<CustomField>
    <fullName>RueExpedition__c</fullName>
    <label>Rue d&#39;expédition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>