unpackaged/main/default/objects/Contract__c/fields/RueFacturation__c.field-meta.xml
<CustomField>
    <fullName>RueFacturation__c</fullName>
    <label>Rue de facturation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>