unpackaged/main/default/objects/Contract__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Statut</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En cours</fullName>
            </value>
            <value>
                <fullName>En cours de traitement</fullName>
            </value>
            <value>
                <fullName>Validé</fullName>
            </value>
            <value>
                <fullName>Traité</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>