unpackaged/main/default/objects/Contract__c/fields/TauxIndexation__c.field-meta.xml
<CustomField>
    <fullName>TauxIndexation__c</fullName>
    <description>Alimenté par S4</description>
    <label>Taux d&#39;indexation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>