unpackaged/main/default/objects/Contract__c/fields/TypeOpportunite__c.field-meta.xml
<CustomField>
    <fullName>TypeOpportunite__c</fullName>
    <label>Type d&#39;opportunité</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RNV</fullName>
            </value>
            <value>
                <fullName>SUP</fullName>
            </value>
            <value>
                <fullName>NCT</fullName>
            </value>
            <value>
                <fullName>PRG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>