unpackaged/main/default/objects/Contract__c/fields/VilleFacturation__c.field-meta.xml
<CustomField>
    <fullName>VilleFacturation__c</fullName>
    <label>Ville de facturation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>