unpackaged/main/default/objects/Contract__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>Account__c</columns>
    <columns>SalesAreaData__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
</ListView>